src/test/ui/asm/aarch64/srcloc.stderr
error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:10:15
   |
LL |         asm!("invalid_instruction");
   |               ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:14:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:19:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:25:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:32:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:37:14
   |
LL |         asm!(concat!("invalid", "_", "instruction"));
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:41:14
   |
LL |             "invalid_instruction",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:47:14
   |
LL |             "invalid_instruction",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:54:14
   |
LL |             "invalid_instruction",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:61:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:68:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:75:14
   |
LL |             "invalid_instruction1",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:76:14
   |
LL |             "invalid_instruction2",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:82:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:82:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:91:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:91:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:95:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction3
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:95:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction4
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:106:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:106:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:110:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction3
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:110:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction4
   | ^

error: aborting due to 23 previous errors

